Fix: Height/Visibility Issue with Edit Recipe Form

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -323,6 +323,11 @@ a:hover {
     width: calc(80vw - 40px);
 }
 
+.form-inline {
+    display: flex;
+    flex-direction: column;
+}
+
 .character-link {
     position: relative;
 }
